Bug 472128 - Doesn't work function Select all for spreadsheets
Summary: Doesn't work function Select all for spreadsheets
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.10.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
: 472562 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-07-10 12:05 UTC by Makeenkov Alexander
Modified: 2024-06-23 07:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Makeenkov Alexander 2023-07-10 12:05:25 UTC
STEPS TO REPRODUCE
1.  Open labplot2
2.  Project -> Add new -> Spreadsheet
3.  Spreadsheet -> Select All

OBSERVED RESULT
Rows and columns are not selected.

EXPECTED RESULT
All rows and columns are selected.

SOFTWARE/OS VERSIONS
OS: ALT Workstation K 10.1
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.107.0
Qt Version: 5.15.9
Comment 1 Paul Worrall 2023-07-24 09:51:51 UTC
*** Bug 472562 has been marked as a duplicate of this bug. ***
Comment 2 Alexander Semke 2024-06-23 07:43:37 UTC
Git commit e5d2121a869f5532fab764034aebd4533e680430 by Alexander Semke.
Committed on 23/06/2024 at 07:43.
Pushed by asemke into branch 'master'.

[spreadsheet] fix the action "Select All" by implementing an own function
that is selecting all cells, the function QTableView::selectAll() doesn't seem to work anymore.

Selection via the shortcut CTRL+A or via clicking on the upper left corner widget
in the spreadsheet doesn't work anymore, neither. This will be addressed later.
FXIED-IN: 2.11

M  +0    -9    src/commonfrontend/matrix/MatrixView.cpp
M  +12   -10   src/commonfrontend/spreadsheet/SpreadsheetView.cpp
M  +1    -0    src/commonfrontend/spreadsheet/SpreadsheetView.h

https://invent.kde.org/education/labplot/-/commit/e5d2121a869f5532fab764034aebd4533e680430