[spreadsheet] fix the action "Select All" by implementing an own function that is selecting all cells, the function QTableView::selectAll() doesn't seem to work anymore.

Selection via the shortcut CTRL+A or via clicking on the upper left corner widget
in the spreadsheet doesn't work anymore, neither. This will be addressed later.

BUG: 472128
FXIED-IN: 2.11